# branchdeck

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  TODOS.md  _bmad-output  biome.json  docker-compose.yml  index.html  package.json  vite.config.ts
.branchdeck/: task.md
.claude/: settings.json
.claude/rules/: crate-boundaries.md  daemon-api.md  logging.md  testing.md  workflows.md
.claude/skills/bmad-story-cycle/: SKILL.md  workflow.md
.claude/skills/pr-shepherd/: SKILL.md
.claude/skills/sat-generate/: SKILL.md
.claude/skills/sat-run/: SKILL.md
.claude/skills/sat-score/: SKILL.md
.github/workflows/: ci.yml  claude-ci-fix.yml  claude-code-review.yml  release.yml
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
crates/branchdeck-core/: .clippy.toml  CLAUDE.md  Cargo.toml
crates/branchdeck-core/src/: error.rs  lib.rs  traits.rs  util.rs
crates/branchdeck-core/src/models/: agent.rs  github.rs  mod.rs  orchestrator.rs  project_config.rs  repo.rs  run.rs  sat.rs  session.rs  task.rs  workflow.rs
crates/branchdeck-core/src/services/: activity_store.rs  agent_scanner.rs  config.rs  event_bridge.rs  git.rs  github.rs  github_retry.rs  hook_config.rs  issue_poller.rs  knowledge_ingestion.rs  merge_poller.rs  mod.rs  orchestrator.rs  pr_poller.rs  project_config.rs  run_effects.rs  run_manager.rs  run_responses.rs  run_stale.rs  run_state.rs  sat_circuit_breaker.rs  sat_comparison.rs  sat_execute.rs  sat_false_positive.rs  sat_generate.rs  sat_issues.rs  sat_pipeline.rs  sat_regression.rs  sat_score.rs  sat_threshold_config.rs  task.rs  task_watcher.rs  terminal.rs  update_manager.rs  workflow.rs  workflow_dispatch.rs  workflow_lifecycle.rs
crates/branchdeck-core/tests/: activity_store_test.rs
crates/branchdeck-daemon/: CLAUDE.md  Cargo.toml
crates/branchdeck-daemon/src/: auth.rs  cli.rs  cli_client.rs  emitter.rs  error.rs  main.rs  state.rs
crates/branchdeck-daemon/src/routes/: activity.rs  events.rs  health.rs  mcp.rs  mod.rs  repos.rs  runs.rs  sat.rs  setup.rs  updates.rs  workflows.rs
docs/: agent-monitoring.md  architecture.md  component-inventory.md  data-models.md  development-guide.md  features.md  index.md  mvp-brief.md  project-overview.md  project-scan-report.json  readme-v2.md  source-tree-analysis.md  tech-stack.md
docs/designs/: daemon-extraction-ceo-plan.md  daemon-extraction-design.md  daemon-extraction-test-plan.md  daemon-extraction.md  unquale-main-design-20260320-171200.md
docs/specs/: workflow-schema.md
e2e/: tsconfig.json  wdio.conf.ts
e2e/specs/: dashboard.ts  drive.ts  font-check.ts  layout.ts  qa-session.ts  repo-sidebar.ts  right-sidebar.ts  shepherd-flow.ts  smoke.ts  terminal.ts  view-switching.ts
sat/: learnings.yaml
sat/personas/: accessibility-user.yaml  confused-newbie.yaml  power-user.yaml
sat/scenarios/: add-first-repository.md  agent-event-log-scrolling.md  approve-agent-permission-request.md  checkout-existing-branch-as-worktree.md  create-and-launch-task.md  create-worktree-from-sidebar.md  delete-worktree-with-branch.md  github-api-unavailable.md  keyboard-only-navigation.md  monitor-agent-activity-heatmap.md  multi-repo-task-dashboard.md  open-terminal-tabs.md  panel-resize-and-layout.md  screen-reader-status-announcements.md  session-persistence-after-restart.md  stale-run-recovery.md  terminal-preset-creation.md  view-git-file-changes.md  view-pr-status-from-sidebar.md  worktree-name-collision.md
sat/scripts/: run-scenario.ts  tsconfig.json  wdio.sat.conf.ts
scripts/: install.sh
sidecar/: agent-bridge.js  knowledge-mcp.js  package.json
src/: App.tsx  CLAUDE.md  index.css  index.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/packaging/: branchdeck.desktop
src-tauri/src/: daemon.rs  error.rs  lib.rs  main.rs  tauri_emitter.rs
src-tauri/src/commands/: agent.rs  git.rs  github.rs  knowledge.rs  mod.rs  orchestrator.rs  run.rs  sat.rs  task.rs  terminal.rs  workspace.rs
src-tauri/src/models/: agent.rs  github.rs  knowledge.rs  mod.rs  orchestrator.rs  repo.rs  run.rs  task.rs
src-tauri/src/services/: activity_store.rs  agent_scanner.rs  config.rs  event_bridge.rs  event_bus.rs  git.rs  github.rs  hook_config.rs  hook_receiver.rs  knowledge.rs  knowledge_ingestion.rs  knowledge_mcp.rs  knowledge_merge.rs  knowledge_query.rs  mod.rs  orchestrator.rs  pr_poller.rs  run_effects.rs  run_manager.rs  run_responses.rs  run_stale.rs  shepherd.rs  task.rs  task_watcher.rs  terminal.rs
src-tauri/tests/: agent_monitoring.rs  artifact_capture.rs  git_operations.rs  github_prs.rs  orchestrator.rs  pr_shepherd.rs  run_lifecycle.rs  run_queue.rs  sat_generate.rs  task_parsing.rs  workflow_registry.rs  workflow_schema.rs
src-tauri/tests/common/: mod.rs
src/components/activity/: ActivityFilterBar.tsx  ActivityTimeline.tsx  EventDetail.tsx  EventRow.tsx
src/components/inbox/: InboxRow.tsx  InboxRowDetail.tsx  InboxRowList.tsx  InboxSummaryBar.tsx  InboxView.tsx
src/components/layout/: AgentsPanel.tsx  ChangesSidebar.tsx  ConnectionIndicator.tsx  FileGrid.tsx  OrchestrationView.tsx  RepoSidebar.tsx  RightPanel.tsx  Shell.tsx  TaskDashboard.tsx  TeamSidebar.tsx  TopBar.tsx  UpdateIndicator.tsx
src/components/lifecycle/: CycleRow.tsx  LifecycleView.tsx
src/components/pr/: AnalysisCard.tsx  PrList.tsx  PrTooltip.tsx  PrTriageView.tsx  TriageCard.tsx  TriageNewRow.tsx
src/components/sat/: FindingRow.tsx  (+3 more)
src/lib/: shortcuts.ts  utils.ts
src/types/: activity.ts  agent.ts  chart.ts  git.ts  github.ts  inbox.ts  keyboard.ts  knowledge.ts  lifecycle.ts  run.ts  sat.ts  setup.ts  task.ts  terminal.ts  ui.ts  update.ts
workflows/implement-issue/: WORKFLOW.md
workflows/pr-shepherd/: WORKFLOW.md
workflows/sat-orchestrator/: WORKFLOW.md
(+103 files in other folders)
