[package]
name = "branchdeck"
version = "0.2.0"
description = "Terminal-first workflow manager for git repositories and worktrees"
authors = ["Doga"]
edition = "2021"

[lib]
name = "branchdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []

[dev-dependencies]
branchdeck-core = { path = "../crates/branchdeck-core" }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.27.0"
serde_yaml = "0.9"
git2 = "0.20"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
