[package]
name = "branchdeck-core"
version = "0.2.0"
edition = "2021"
description = "Core business logic for Branchdeck — models, services, error types"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
octocrab = "0.44"
chrono = { version = "0.4.44", features = ["clock"] }
yaml-front-matter = "0.1"
notify-debouncer-mini = "0.7"
notify = "8"
portable-pty = "0.9"

# Knowledge service (feature-gated)
rvf-runtime = { version = "0.2", optional = true }
fastembed = { version = "5", optional = true }
bincode = { version = "2", optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }

# SONA learning engine (feature-gated)
ruvector-sona = { version = "0.1", optional = true, features = ["serde-support"] }

[features]
default = ["knowledge"]
knowledge = ["dep:rvf-runtime", "dep:fastembed", "dep:bincode", "dep:tokio-util"]
sona = ["dep:ruvector-sona", "knowledge"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
