[package]
name = "branchdeck-daemon"
version = "0.2.0"
edition = "2021"
description = "Standalone daemon for Branchdeck — HTTP + SSE + WebSocket API"

[dependencies]
branchdeck-core = { path = "../branchdeck-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
