[package]
name = "branchdeck-daemon"
version = "0.2.0"
edition = "2021"
description = "Standalone daemon for Branchdeck — HTTP + SSE + WebSocket API"

[dependencies]
branchdeck-core = { path = "../branchdeck-core", features = ["openapi"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
chrono = { version = "0.4", features = ["clock"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower-http = { version = "0.6", features = ["set-header"] }
http = "1"
ulid = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
